# herzen-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
apps/desktop/: package-lock.json  package.json  vite.config.ts
apps/desktop/src/: app.css  app.html
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/lib/components/: ChatMessage.svelte  MemoryBar.svelte  Orb.svelte  Sidebar.svelte
apps/desktop/src/lib/stores/: chat.ts  connection.ts  models.ts  orb.ts  skills.ts  system.ts
apps/desktop/src/routes/: +layout.svelte  +page.ts
apps/desktop/src/routes/chat/: +page.svelte
apps/desktop/src/routes/models/: +page.svelte
apps/desktop/src/routes/system/: +page.svelte
apps/desktop/src/routes/workshop/: +page.svelte
config/: herzen.example.toml
crates/herzen-audio/: Cargo.toml
crates/herzen-audio/src/: lib.rs
crates/herzen-config/: Cargo.toml
crates/herzen-config/src/: lib.rs  model.rs
crates/herzen-context/: Cargo.toml
crates/herzen-context/src/: lib.rs
crates/herzen-core/: Cargo.toml
crates/herzen-core/src/: lib.rs
crates/herzen-daemon/: Cargo.toml
crates/herzen-daemon/src/: lib.rs  main.rs
crates/herzen-ha/: Cargo.toml
crates/herzen-ha/src/: lib.rs
crates/herzen-llm/: Cargo.toml
crates/herzen-llm/src/: lib.rs  pool.rs  provider.rs  types.rs
crates/herzen-router/: Cargo.toml
crates/herzen-router/src/: lib.rs
crates/herzen-server/: Cargo.toml
crates/herzen-server/src/: lib.rs  routes.rs  state.rs
crates/herzen-skills/: Cargo.toml
crates/herzen-skills/src/: definition.rs  embedding.rs  engine.rs  keyword.rs  lib.rs  loader.rs  matcher.rs
crates/herzen-stt/: Cargo.toml
crates/herzen-stt/src/: lib.rs
crates/herzen-tts/: Cargo.toml
crates/herzen-tts/src/: lib.rs
crates/herzen-vad/: Cargo.toml
crates/herzen-vad/src/: lib.rs
docs/: ui-design.md
