[package]
name = "herzen-core"
description = "Turn pipeline orchestration for Herzen"
version.workspace = true
edition.workspace = true

[dependencies]
herzen-config = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
