[package]
name = "herzen-ha"
description = "Home Assistant integration with deterministic intent matching"
version.workspace = true
edition.workspace = true

[dependencies]
herzen-config = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
