[package]
name = "herzen-router"
description = "Task decomposition and routing to specialist models"
version.workspace = true
edition.workspace = true

[dependencies]
herzen-config = { workspace = true }
herzen-llm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
