[package]
name = "herzen-server"
description = "HTTP + WebSocket API server via axum"
version.workspace = true
edition.workspace = true

[dependencies]
herzen-config = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
