[package]
name = "herzen-skills"
description = "Skill engine: intent matching via multilingual embeddings + keyword fast path"
version.workspace = true
edition.workspace = true

[dependencies]
herzen-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
glob = "0.3"

[dev-dependencies]
tempfile = "3"
