[package]
name = "herzen-tts"
description = "TTS provider registry with dynamic settings schema"
version.workspace = true
edition.workspace = true

[dependencies]
herzen-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
